--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
            run: pip install bandit
 
          - name: run bandit scan
-           run: bandit -r .
+           run: bandit -ll -ii -r .
         
   
