--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
            run: pip install bandit
 
          - name: run bandit scan
-           run: bandit -ll -ii -r .
+           run: bandit -ll -ii -r . -f json -o bandit-report.json
+
+         - name: upload artifacts
+           uses: actions/upload-artifacts@v3
+           with:
+             name: bandit finddings
+             path: bandit-report.json
         
   
