--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
            run: bandit -ll -ii -r . -f json -o bandit-report.json
 
          - name: upload artifacts
-           uses: actions/upload-artifacts@v3
+           uses: actions/upload-artifact@v3
            with:
              name: bandit finddings
              path: bandit-report.json
