--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
          - name: upload artifacts
            uses: actions/upload-artifact@v4
            with:
-             name: bandit finddings
+             name: bandit-findings
              path: bandit-report.json
         
   
