--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
          - name: upload artifacts
            uses: actions/upload-artifact@v4
-           if: always
+           if: always()
            with:
              name: bandit-findings
              path: bandit-report.json
