--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,27 @@ jobs:
            with:
              name: bandit-findings
              path: bandit-report.json
+
+   image_scan:
+     name: build and scan the image
+     runs-on: ubuntu-latest
+     steps:
+         - name: checkout code
+           uses: actions/checkout@v2
+
+         - name: setup docker
+           uses: docker-practice/actions-setup-docker@v1
+           with:
+              docker_version: '27.0.3'
+         - name: build image
+           run: docker build -f Dockerfile -t myapp:latest .
+
+         - name: docker scout scan
+           run: |
+             curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+             sh install-scout.sh
+             docker scout quickview
+             docker scout cves
+     
         
   
