--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,46 +6,55 @@ jobs:
        runs-on: ubuntu-latest
        steps:
          - name: checkout code
-           uses: actions/checkout@v2
+           uses: actions/checkout@v4
 
          - name: setup python
-           uses: actions/setup-python@v2
-           with: 
+           uses: actions/setup-python@v5
+           with:
              python-version: 3.11
 
          - name: install bandit
-           run: pip install bandit
+           run: pip install bandit[sarif]
 
          - name: run bandit scan
-           run: bandit -ll -ii -r . -f json -o bandit-report.json
+           run: bandit -ll -ii -r . -f sarif -o bandit-report.sarif
+           continue-on-error: true
+
+         - name: upload SARIF to GitHub Security
+           uses: github/codeql-action/upload-sarif@v3
+           if: always()
+           with:
+             sarif_file: bandit-report.sarif
 
          - name: upload artifacts
            uses: actions/upload-artifact@v4
            if: always()
            with:
              name: bandit-findings
-             path: bandit-report.json
+             path: bandit-report.sarif
 
    image_scan:
      name: build and scan the image
      runs-on: ubuntu-latest
+     needs: sast_scan
      steps:
          - name: checkout code
-           uses: actions/checkout@v2
+           uses: actions/checkout@v4
 
-         - name: setup docker
-           uses: docker-practice/actions-setup-docker@v1
-           with:
-              docker_version: '29.1.3'
-              
+         - name: Set up Docker Buildx
+           uses: docker/setup-buildx-action@v3
+
          - name: build image
            run: docker build -f Dockerfile -t myapp:latest .
 
          - name: docker scout scan
+           env:
+             DOCKER_USER: ${{ secrets.REPO_USER }}
+             DOCKER_PWD: ${{ secrets.REPO_PWD }}
            run: |
              curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
              sh install-scout.sh
-             echo ${{ secrets.REPO_PWD }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
+             echo "$DOCKER_PWD" | docker login -u "$DOCKER_USER" --password-stdin
              docker scout quickview
              docker scout cves
      
