--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,28 @@ jobs:
          - name: checkout code
            uses: actions/checkout@v4
 
-         - name: Set up Docker Buildx
-           uses: docker/setup-buildx-action@v3
+         - name: Install Docker 20.10.7
+           run: |
+             # Remove existing Docker
+             sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
+             
+             # Install prerequisites
+             sudo apt-get update
+             sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+             
+             # Add Docker's official GPG key
+             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+             
+             # Set up stable repository
+             echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+             
+             # Install Docker 20.10.7
+             sudo apt-get update
+             sudo apt-cache madison docker-ce
+             sudo apt-get install -y docker-ce=5:20.10.7~3-0~ubuntu-$(lsb_release -cs) docker-ce-cli=5:20.10.7~3-0~ubuntu-$(lsb_release -cs) containerd.io
+             
+             # Verify installation
+             docker --version
 
          - name: build image
            run: docker build -f Dockerfile -t myapp:latest .
@@ -57,6 +77,6 @@ jobs:
              echo "$DOCKER_PWD" | docker login -u "$DOCKER_USER" --password-stdin
              docker scout quickview
              docker scout cves
-     
+
         
   
