--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
    image_scan:
      name: build and scan the image
-     runs-on: ubuntu-latest
+     runs-on: ubuntu-20.04
      needs: sast_scan
      steps:
          - name: checkout code
@@ -53,13 +53,13 @@ jobs:
              # Add Docker's official GPG key
              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
              
-             # Set up stable repository
-             echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+             # Set up stable repository for Ubuntu 20.04 (focal)
+             echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu focal stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
              
              # Install Docker 20.10.7
              sudo apt-get update
              sudo apt-cache madison docker-ce
-             sudo apt-get install -y docker-ce=5:20.10.7~3-0~ubuntu-$(lsb_release -cs) docker-ce-cli=5:20.10.7~3-0~ubuntu-$(lsb_release -cs) containerd.io
+             sudo apt-get install -y docker-ce=5:20.10.7~3-0~ubuntu-focal docker-ce-cli=5:20.10.7~3-0~ubuntu-focal containerd.io
              
              # Verify installation
              docker --version
