--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,26 +43,30 @@ jobs:
 
          - name: Install Docker 20.10.7
            run: |
-             # Remove existing Docker
-             sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
+             # Remove existing Docker packages completely
+             sudo apt-get remove -y docker-ce docker-ce-cli docker.io containerd.io docker-scan-plugin docker-buildx-plugin || true
+             sudo apt-get autoremove -y
              
              # Install prerequisites
              sudo apt-get update
              sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
              
              # Add Docker's official GPG key
+             sudo rm -f /usr/share/keyrings/docker-archive-keyring.gpg
              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
              
              # Set up stable repository for Ubuntu 20.04 (focal)
              echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu focal stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
              
-             # Install Docker 20.10.7
+             # Install Docker 20.10.7 with --allow-downgrades
              sudo apt-get update
-             sudo apt-cache madison docker-ce
-             sudo apt-get install -y docker-ce=5:20.10.7~3-0~ubuntu-focal docker-ce-cli=5:20.10.7~3-0~ubuntu-focal containerd.io
+             sudo apt-cache madison docker-ce | grep 20.10.7
+             sudo apt-get install -y --allow-downgrades docker-ce=5:20.10.7~3-0~ubuntu-focal docker-ce-cli=5:20.10.7~3-0~ubuntu-focal containerd.io
              
              # Verify installation
              docker --version
+             sudo systemctl restart docker
+             sudo docker run hello-world
 
          - name: build image
            run: docker build -f Dockerfile -t myapp:latest .
