--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,16 +71,23 @@ jobs:
          - name: build image
            run: docker build -f Dockerfile -t myapp:latest .
 
-         - name: docker scout scan
-           env:
-             DOCKER_USER: ${{ secrets.REPO_USER }}
-             DOCKER_PWD: ${{ secrets.REPO_PWD }}
-           run: |
-             curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-             sh install-scout.sh
-             printf '%s\n' "$DOCKER_PWD" | docker login -u "$DOCKER_USER" --password-stdin
-             docker scout quickview
-             docker scout cves
+#         - name: docker scout scan
+#           env:
+#             DOCKER_USER: ${{ secrets.REPO_USER }}
+#             DOCKER_PWD: ${{ secrets.REPO_PWD }}
+#           run: |
+#             curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+#             sh install-scout.sh
+#             printf '%s\n' "$DOCKER_PWD" | docker login -u "$DOCKER_USER" --password-stdin
+#             docker scout quickview
+#             docker scout cves
+
+         - name: docker scout
+           uses: docker/scout-action@v1.18.2
+           with:
+                 dockerhub-user: ${{ secrets.REPO_USER }}
+                 dockerhub-password: ${{ secrets.REPO_PWD }}
+                 command: quickview,cves
 
         
   
