--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,7 @@ jobs:
                  dockerhub-user: ${{ secrets.REPO_USER }}
                  dockerhub-password: ${{ secrets.REPO_PWD }}
                  command: quickview,cves
+                 only-severities: "Critical,High"
 
         
   
