--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,15 @@ jobs:
                  dockerhub-password: ${{ secrets.REPO_PWD }}
                  command: quickview,cves
                  only-severities: "Critical,High"
+                 sarif-file: scout-report.sarif
+
+
+         - name: upload artifacts
+           uses: actions/upload-artifact@v4
+           if: always()
+           with:
+             name: scout-findings
+             path: scout-report.sarif
 
         
   
