--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
                  dockerhub-user: ${{ secrets.REPO_USER }}
                  dockerhub-password: ${{ secrets.REPO_PWD }}
                  command: quickview,cves
-                 only-severities: "Critical,High"
+                 only-severities: "critical,high"
                  sarif-file: scout-report.sarif
 
 
